--- a/cool_thing.html
+++ b/cool_thing.html
@@ -2,15 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="bruh.css">
+	<title>BEBRABEBRABEBRABEBRABEBRABEBRABEBRABEBRABEBRABEBRABEBRABEBRA</title>
 </head>
 <body>
-	What you know about rolling down in the deep <br>
-	When your brain goes numb, you can call that mental freeze <br>
-	When the people talk too much, put that shiet in slow motion, yeah <br>
-
-	<h1 class="red">Хочу пельменiв</h1>
-	<h1 class="aboba">И я тоже</h1>
+<h1 class="red">Joe Biden</h1>
+	
 </body>
 </html>
