--- a/cool_thing.html
+++ b/cool_thing.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>BEBRABEBRABEBRABEBRABEBRABEBRABEBRABEBRABEBRABEBRABEBRABEBRA</title>
+	<title></title>
 </head>
 <body>
 <h1 class="red">Joe Biden</h1>
