--- a/esmeralda.html
+++ b/esmeralda.html
@@ -3,31 +3,11 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta charset="utf-8">
-	<title>Сентябрь горииит...</title>
-</head>
+	<title>Гань Юй</title>
 <body>
-<div class="container">
-    <div class="card">
-        <img src="https://autogear.ru/misc/i/gallery/22092/2278892.jpg" alt="">
-        <div>
-            <h3>Здесь текст</h3>
-            <p>Тег ol устанавливает нумерованный список. Каждый элемент списка должен начинаться с тега li. Если к тегу ol применяется таблица стилей, то элементы li наследуют эти свойства.</p>
-        </div>
-    </div>
-    <div class="card">
-        <img src="https://autogear.ru/misc/i/gallery/22092/2278892.jpg" alt="">
-        <div>
-            <h3>Здесь текст</h3>
-            <p>Тег ol устанавливает нумерованный список. Каждый элемент списка должен начинаться с тега li. Если к тегу ol применяется таблица стилей, то элементы li наследуют эти свойства.</p>
-        </div>
-    </div>
-    <div class="card">
-        <img src="https://autogear.ru/misc/i/gallery/22092/2278892.jpg" alt="">
-        <div>
-            <h3>Здесь текст</h3>
-            <p>Тег ol устанавливает нумерованный список. Каждый элемент списка должен начинаться с тега li. Если к тегу ol применяется таблица стилей, то элементы li наследуют эти свойства.</p>
-        </div>
-    </div>
-</div>
+ <div class="bebra"> 
+     <h1 class="center">Это моя вайфу</h1>
+     <img src="https://pbs.twimg.com/media/E0N7wEjVkAc6krN.jpg">
+ </div>
 </body>
 </html>
