--- a/mocha.html
+++ b/mocha.html
@@ -2,13 +2,17 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="grind.css">
 	<title>Это текст</title>
 </head>
 <body>
- <div class="blocky"> Жопа
- 	<div>а</div>
- 	<div>ДА</div>
-
+<div class="blocky">
+ 	<iframe width="560" height="315" src="https://www.youtube.com/embed/5oktDlQxuzk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Типа видосик</iframe>
+ 	<iframe width="560" height="315" src="https://www.youtube.com/embed/MN1wAnJvMU0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ 	<iframe width="560" height="315" src="https://www.youtube.com/embed/hp3weiyLWgI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ 	<iframe width="560" height="315" src="https://www.youtube.com/embed/eYIVekfOD6I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ 	<iframe width="560" height="315" src="https://www.youtube.com/embed/N0OE7ExHEy8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ 	<iframe width="560" height="315" src="https://www.youtube.com/embed/byZq0wH34y4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  </div>
 </body>
 </html>
