--- a/mocha.html
+++ b/mocha.html
@@ -3,16 +3,18 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="grind.css">
-	<title>Это текст</title>
+	<title>Это хайп</title>
 </head>
 <body>
-<div class="blocky">
- 	<iframe width="560" height="315" src="https://www.youtube.com/embed/5oktDlQxuzk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Типа видосик</iframe>
- 	<iframe width="560" height="315" src="https://www.youtube.com/embed/MN1wAnJvMU0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
- 	<iframe width="560" height="315" src="https://www.youtube.com/embed/hp3weiyLWgI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
- 	<iframe width="560" height="315" src="https://www.youtube.com/embed/eYIVekfOD6I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
- 	<iframe width="560" height="315" src="https://www.youtube.com/embed/N0OE7ExHEy8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
- 	<iframe width="560" height="315" src="https://www.youtube.com/embed/byZq0wH34y4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
- </div>
+<p>Черная Пятнитса</p> 
+<div class="search">Найдется че надо, чумба</div>
+<div class="ad1"> Скидки, скидки, бла, бла, бла </div>
+<p>Ураааааа, скидки</p>
+<div class="ad2"> qwerty 
+ <div class="ad3">Абоба</div>
+ <div class="ad3">Raid: Shadow Legends</div>
+</div>
+ <div class="ad2">ТОВАААААААААААААААААРЫ</div>
+ <p>Мне уже надоело, чего так много?</p>
 </body>
 </html>
