--- a/mocha.html
+++ b/mocha.html
@@ -10,7 +10,7 @@
 <div class="search">Найдется че надо, чумба</div>
 <div class="ad1"> Скидки, скидки, бла, бла, бла </div>
 <p>Ураааааа, скидки</p>
-<div class="ad2"> qwerty 
+<div class="ad2">  
  <div class="ad3">Абоба</div>
  <div class="ad3">Raid: Shadow Legends</div>
 </div>
