MAKE THE GODDAMN BLOCKS
MAKE THE GODDAMN BLOCKS

--- a/esmeralda.html
+++ b/esmeralda.html
@@ -3,11 +3,8 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta charset="utf-8">
-	<title>Гань Юй</title>
+	<title>BALLS</title>
 <body>
- <div class="bebra"> 
-     <h1 class="center">Это моя вайфу</h1>
-     <img src="https://pbs.twimg.com/media/E0N7wEjVkAc6krN.jpg">
- </div>
+
 </body>
 </html>
