--- a/mocha.html
+++ b/mocha.html
@@ -6,16 +6,12 @@
 	<title>Это хайп</title>
 </head>
 <body>
-<p>Черная Пятнитса</p> 
-<div class="search">Найдется че надо, чумба</div>
-<div class="ad1"> Скидки, скидки, бла, бла, бла </div>
-<p>Ураааааа, скидки</p>
-<div class="ad2">  
- <div class="ad3">Абоба</div>
- <div class="ad3">Raid: Shadow Legends</div>
- <div class="ad3">яэ мико confirmed</div>
+<div class="container">
+    <div class="red">BRUH</div>
+    <div class="blue">SIKE</div>
+    <div class="green">GEEZ NUTS</div>
+
+
 </div>
- <div class="ad2">ТОВАААААААААААААААААРЫ</div>
- <p>Мне уже надоело, чего так много?</p>
 </body>
 </html>
