--- a/realproject.html
+++ b/realproject.html
@@ -3,11 +3,18 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="styles-of-beyond.css">
 	<meta charset="utf-8">
-	<title>Ganyu Simps Fandom Page</title>
+	<title>Figma Balls</title>
 </head>
 <body>
-<div class="title-text">Bruh</div>
-<div class="center-text">Ganyu is da best waifu ;)</div>
-<div class="center-text">What you know about rolling down in a deep</div>
+	<div class="upper-block">
+		
+
+
+
+	</div>
+
+
+
+</ul>
 </body>
 </html>
