--- a/mocha.html
+++ b/mocha.html
@@ -6,12 +6,9 @@
 	<title>Это хайп</title>
 </head>
 <body>
-<div class="container">
-    <div class="red">BRUH</div>
-    <div class="blue">SIKE</div>
-    <div class="green">GEEZ NUTS</div>
+
+<div></div>
 
 
-</div>
 </body>
 </html>
