--- a/new project.html
+++ b/new project.html
@@ -2,25 +2,15 @@
 <html>
 <head>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost&family=Lobster&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost&family=Lobster&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
-	<meta charset="utf-8">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jost&family=Lobster&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="stylesofproject.css">
 	<title>GSR Forum</title>
 </head>
 <body>
 	<div class="the-main-line">
-		<div class="options">
-			<div class="the-logo"> dffvcxgb</div>
-			<div class="option-one"> amoguis is not realk </div>
-
-		</div>
-
-
-	</div>
+    <div class="another-line"></div>
+		<div class="logotype">GSR Forum</div>
 
 </body>
 </html>
