--- a/new project.html
+++ b/new project.html
@@ -9,8 +9,16 @@
 </head>
 <body>
 	<div class="the-main-line">
-    <div class="another-line"></div>
+    
 		<div class="logotype">GSR Forum</div>
+		<div class="options"> 
+	        <div>booba</div>
+			<div>fessdfsf</div>	
+		</div>
+		<div class="logout">booba</div>
+	</div>
+
+
 
 </body>
 </html>
