--- a/new project.html
+++ b/new project.html
@@ -12,13 +12,15 @@
     
 		<div class="logotype">GSR Forum</div>
 		<div class="options"> 
-	        <div>booba</div>
-			<div>fessdfsf</div>	
-		</div>
-		<div class="logout">booba</div>
+	        <div>Change language</div>
+			<div>Subscribtions</div>	
+		    <div>Most popular</div>  
 	</div>
-
-
-
+	<div class="logout">Log In</div>
+	</div>
+	<div class="ads-blocks"> 
+		<div class="ads-text">dsvdsvdsfg</div>
+		<div class="ads-text">asfkkmj;lffaj;lkafj</div>
+	</div>
 </body>
 </html>
