something to do

--- a/new project.html
+++ b/new project.html
@@ -19,8 +19,10 @@
 	<div class="logout">Log In</div>
 	</div>
 	<div class="ads-blocks"> 
-		<div class="ads-text">dsvdsvdsfg</div>
-		<div class="ads-text">asfkkmj;lffaj;lkafj</div>
+		<div class="ads-text">Some ads, yeah</div>
+		<div class="ads-text">Ne mogu pisat po angliyski</div>
+		<div class="ads-text">Subscribe to weaboo sauce</div>
+		<div class="ads-text">Andrey, tvouy mat'!</div>
 	</div>
 </body>
 </html>
