something to do

--- a/new project.html
+++ b/new project.html
@@ -24,5 +24,13 @@
 		<div class="ads-text">Subscribe to weaboo sauce</div>
 		<div class="ads-text">Andrey, tvouy mat'!</div>
 	</div>
+
+	<div class="trends">
+      <div class="ads-text"></div>
+	  <div class="ads-text"></div>
+	  <div class="ads-text"></div>
+	  <div class="ads-text"></div>
+	  <div class="ads-text"></div>
+	</div>
 </body>
 </html>
