my project (DO IT BLYAT)

--- a/new project.html
+++ b/new project.html
@@ -18,19 +18,27 @@
 	</div>
 	<div class="logout">Log In</div>
 	</div>
+
 	<div class="ads-blocks"> 
-		<div class="ads-text">Some ads, yeah</div>
+		<div class="main-ads-text">Some ads, yeah</div>
 		<div class="ads-text">Ne mogu pisat po angliyski</div>
 		<div class="ads-text">Subscribe to weaboo sauce</div>
 		<div class="ads-text">Andrey, tvouy mat'!</div>
+		
 	</div>
 
 	<div class="trends">
-      <div class="ads-text"></div>
-	  <div class="ads-text"></div>
-	  <div class="ads-text"></div>
-	  <div class="ads-text"></div>
-	  <div class="ads-text"></div>
+      <div class="main-ads-text">sdfdfsdfsfds</div>
+	  <div class="ads-text">sdfdfsdfsdsfdfsfds</div>
+	  <div class="ads-text">dfsdfsdfsdfsdfs</div>
+	  <div class="ads-text">dfsdfsdfsdfs</div>
+	  <div class="ads-text">dsfdfsdfsdfsdf</div>
+	</div>
+
+	<div class="post-type-placeholder">
+		<div class="main-ads-text">Add your post</div>
+		<input>
+		<button class="add-post">Add post</button>
 	</div>
 </body>
-</html>
+</html>                 
